Projects section finished and added types and constant files so it's easyer to manage projects, experiences, sections in the page and social links. Contact section styled without logic, footer and navbar done

--- a/src/components/Bubble_text.astro
+++ b/src/components/Bubble_text.astro
@@ -1,10 +1,11 @@
 ---
 interface Props {
 	text: string;
+  className: string;
 }
 
-const { text } = Astro.props;
+const { text, className } = Astro.props;
 ---
-<p class="cursor-default px-3 py-0.5 rounded-full shadow-md bg-black/95 text-primary opacity-0 transition-opacity duration-300 w-fit absolute -bottom-9">
+<p class={className}>
   {text}
 </p>
