--- a/src/icons/arrow_right.astro
+++ b/src/icons/arrow_right.astro
@@ -6,7 +6,7 @@ interface Props {
 const { width, height } = Astro.props;
 ---
 <svg 
-    class="-translate-x-2.5 group-hover:translate-x-0 transition-all duration-500"
+    class="-translate-x-2.5 group-hover:translate-x-0 transition-transform duration-700"
     width={width}
     height={height} 
     viewBox="0 0 24 24"
