--- a/src/icons/arrow_top_right.astro
+++ b/src/icons/arrow_top_right.astro
@@ -6,7 +6,7 @@ interface Props {
 const { width, height } = Astro.props;
 ---
 <svg 
-    class={`group-hover:-translate-y-1.5 group-hover:translate-x-1 transition-all duration-500 `}
+    class={`group-hover/arrow:-translate-y-1.5 group-hover/arrow:translate-x-1 transition-transform duration-500 delay-0`}
     width={width}
     height={height}
     viewBox="0 0 24 24">
