--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,15 @@
 ---
-  import Linkedin from "../icons/linkedin.astro";
-  import Github from "../icons/github.astro";
-  import SocialLinks from "./Social_links.astro";
-  import EmailCopy from "./Email_copy.svelte";
-  import { LINKEDIN_URL, GITHUB_URL, RESUME_URL, EMAIL_ADDRESS } from '../constants.ts';
+import Linkedin from "../icons/linkedin.astro";
+import Github from "../icons/github.astro";
+import SocialLinks from "./Social_links.astro";
+import EmailCopy from "./Email_copy.svelte";
+import { LINKEDIN_URL, GITHUB_URL, RESUME_URL, EMAIL_ADDRESS } from '../constants/index';
+interface Props {
+  id: string;
+}
+const { id } = Astro.props;
 ---
-<section class="w-full min-h-screen bg-gradient flex justify-center items-center flex-col gap-8 shadow-primary drop-shadow-md">
+<section {id} class="w-full min-h-screen bg-gradient flex justify-center items-center flex-col gap-8 shadow-primary drop-shadow-md">
   <h1 class="font-montserrat font-bold text-8xl tracking-[-.5rem] flex flex-col items-center">
     Hi, I'm
     <span class="inline">
@@ -21,7 +25,7 @@
     <span class="highlight-offset">helps</span> make work easier for <br> <span class="highlight-offset">my team</span>.
     Always learning and 
     <span class="highlight-offset">staying up to date</span> with the latest <br> technologies
-    <span class="highlight-offset">to deliver the best results</span>.
+    <span class="highlight-offset">to deliver the best results.</span>
   </p>
   <div class="flex justify-around items-center gap-5">
     <SocialLinks 
@@ -50,7 +54,7 @@
       emailAddress={EMAIL_ADDRESS} 
       bubbleText="Copy my email" 
       successText="Ready to contact me!" 
-      buttonClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[3.375rem] h-[3.375rem] hover:scale-95 hover:bg-black/95 transition-all duration-500 [&:hover+p]:opacity-100"
+      buttonClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[3.375rem] h-[3.375rem] hover:scale-95 hover:bg-black/95 transition-all duration-500 [&:hover+p]:opacity-100 pb-2.5"
       bubbleClassName={'cursor-default px-3 py-0.5 rounded-full bg-black/95 text-primary opacity-0 transition-opacity duration-300 absolute -bottom-9 shadow-md'}
     >
       <strong class="font-bold text-3xl">@</strong>
