--- a/src/icons/copy_clipboard.astro
+++ b/src/icons/copy_clipboard.astro
@@ -6,7 +6,7 @@ interface Props {
 const { width, height } = Astro.props;
 ---
 <svg 
-    class="group-hover:scale-90 transition-all duration-500"
+    class="group-hover:rotate-90 transition-transform duration-500"
     xmlns="http://www.w3.org/2000/svg"
     width={width}
     height={height} 
