--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
@@ -46,7 +46,6 @@ const { title } = Astro.props;
     background-size: 200% 150%;
     animation: gradient-radial 10s ease infinite alternate;
   }
-
 	@keyframes gradient-radial {
     0% {
         background-position: 0% 50%;
@@ -61,10 +60,14 @@ const { title } = Astro.props;
 
 	.highlight-offset {
     @apply relative;
+		z-index: 0;
   }
   .highlight-offset::before {
     content: " ";
     @apply absolute bg-accent w-full h-2/4 top-[40%] left-[2%];
     z-index: -1;
   }
+	*:hover > .highlight-none::before {
+		@apply bg-black transition-all duration-500
+	}
 </style>
