--- a/src/components/Experiences.astro
+++ b/src/components/Experiences.astro
@@ -17,7 +17,7 @@ const { id } = Astro.props;
     </p>
   </div>
   <div class="">
-    <div class="grid grid-cols-2">
+    <div class="grid md:grid-cols-2 grid-cols-1">
       {EXPERIENCES.map((experience, index) => {
         return (
           <>
