--- a/src/components/Social_links.astro
+++ b/src/components/Social_links.astro
@@ -14,7 +14,7 @@ const { href, bubbleText, anchorClassName } = Astro.props;
     <slot/>
   </a>
   { bubbleText ?
-    <BubbleText text={bubbleText} className="cursor-default px-3 py-0.5 rounded-full shadow-md bg-black/95 text-primary opacity-0 transition-opacity duration-300 w-fit absolute -bottom-9"/>:''
+    <BubbleText text={bubbleText} className="cursor-default text-sm sm:text-base px-2 sm:px-3 py-0.5 rounded-full shadow-md bg-black/95 text-primary opacity-0 transition-opacity duration-300 w-fit absolute -bottom-9"/>:''
   }
   
 </div>
