--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const { isOdd, experience } = Astro.props;
 ---
-<a href={experience.linkPage} target="_blank" class={`pb-5 border-black ${isOdd ? 'border-r':'border-x'} group group/arrow hover:bg-black transition-colors duration-500 hover:text-primary`}>
+<a href={experience.linkPage} target="_blank" class={`pb-5 border-black ${isOdd ? 'border-r border-l md:border-l-0 ':'border-x'} group group/arrow hover:bg-black transition-colors duration-500 hover:text-primary`}>
   <div class="border-b border-black pt-5">
     <p class="text-black/70 font-light pl-5 group-hover:text-primary/90 transition-colors duration-500">{
       experience.startYear && experience.startYear != experience.endYear ? 
@@ -16,16 +16,16 @@ const { isOdd, experience } = Astro.props;
       :
       `${experience.startMonth} - ${experience.endMonth} ${experience.endYear}`}
     </p>
-    <div class="pl-5 flex justify-between items-end group-hover:text-accent">
+    <div class="pl-2  md:pl-5 flex justify-between items-end group-hover:text-accent">
       <h3 class="font-montserrat font-bold text-2xl">{experience.company}</h3>
       <ArrowTopRight width="28" height="28"/>
     </div>
   </div>
-  <div class="pl-5 pr-3 py-2.5 text-sm">
-    <h4 class="text-black/75 font-bold text-lg group-hover:text-accent/85 transition-colors duration-500">{experience.title}</h4>
+  <div class="pl-2 md:pl-5 pr-3 py-2.5 text-sm">
+    <h4 class="text-black/75 font-bold text-lg group-hover:text-accent/90 transition-colors duration-500">{experience.title}</h4>
     <ol class="">
       {experience.description.map((line) => (
-        <li class="py-1">{line}</li>
+        <li class="py-1" set:html={line}></li>
       ))}
     </ol>
   </div>
