--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,16 @@ import CopyClipboard from "../icons/copy_clipboard.astro";
 import ArrowTopRight from "../icons/arrow_top_right.astro";
 import { LINKEDIN_URL, GITHUB_URL, RESUME_URL, EMAIL_ADDRESS } from '../constants/index';
 ---
-<footer class="pb-20 pt-12 text-primary">
-  <div class="w-9/12 mx-auto grid grid-cols-2 min-h-48">
-    <div class="flex flex-col items-start text-primary/80 text-sm relative">
-      <pre class="text-[0.7rem] group hover:text-primary transition-colors duration-100 cursor-default">
+<footer class="pt-16 pb-14 text-primary">
+  <div class="w-9/12 mx-auto grid md:grid-cols-2 grid-cols-1 gap-y-8">
+    <div class="flex flex-col items-start gap-2 text-primary/80 text-sm relative order-last md:order-first">
+      <p class="">
+        Based on my previous design and build using 
+        <span class="text-primary/90 font-semibold">Astro</span> with some <span class="text-primary/90 font-semibold">Svelte</span> and <span class="text-primary/90 font-semibold">Tailwind CSS</span>, 
+        deployed in my own <span class="text-primary/90 font-semibold">VPS</span> with <span class="text-primary/90 font-semibold">Ngnix</span>. Titles with font <span class="text-primary/90 font-semibold">Montserrat</span> 
+        (the best) and the rest in font <span class="text-primary/90 font-semibold">DM Sans</span>.
+      </p>
+      <pre class="text-[0.7rem] group hover:text-primary transition-colors duration-100 cursor-default hidden md:block">
  (\.   <span class="group-hover:text-purple-400 transition-colors duration-300">\</span>      ,/)
   \(   <span class="group-hover:text-purple-400 transition-colors duration-300">|\</span>     )/
   <span class="group-hover:text-purple-600 transition-colors duration-500">//\</span>  <span class="group-hover:text-purple-400 transition-colors duration-500">| \</span>   <span class="group-hover:text-purple-600 transition-colors duration-500">/\\</span>
@@ -16,16 +22,10 @@ import { LINKEDIN_URL, GITHUB_URL, RESUME_URL, EMAIL_ADDRESS } from '../constant
   <span class="group-hover:text-purple-600 transition-colors duration-500">\/\</span>  ####  <span class="group-hover:text-purple-600 transition-colors duration-500">/\/</span>
        `##'
       </pre>
-      <p class="">
-        Based on my previous design and build using 
-        <span class="text-primary/90 font-semibold">Astro</span> with <span class="text-primary/90 font-semibold">Svelte</span> and <span class="text-primary/90 font-semibold">Tailwind CSS</span>, 
-        deployed in my own <span class="text-primary/90 font-semibold">VPS</span>. Titles with font <span class="text-primary/90 font-semibold">Montserrat</span> 
-        (the best) and the rest in font <span class="text-primary/90 font-semibold">DM Sans</span>.
-      </p>
     </div>
     <div class="text-primary/90">
-      <h2 class="font-montserrat tracking-[-.1rem] font-bold text-3xl text-right pb-4">Social</h2>
-      <ul class="flex flex-col gap-2.5 justify-center items-end">
+      <h2 class="font-montserrat tracking-[-.1rem] font-bold text-3xl md:text-right pb-2 md:pb-4">Social</h2>
+      <ul class="flex flex-col gap-1 md:gap-2.5 justify-center items-start md:items-end">
         <li>
           <SocialLinks 
             href={LINKEDIN_URL} 
@@ -61,7 +61,7 @@ import { LINKEDIN_URL, GITHUB_URL, RESUME_URL, EMAIL_ADDRESS } from '../constant
             successText="Ready!" 
             onlyText={true}
             buttonClassName="flex items-center gap-1 group hover:text-accent transition-all duration-500 [&:hover+p]:opacity-100"
-            bubbleClassName="cursor-default px-3 py-0.5 rounded-full bg-primary/85 text-black opacity-0 transition-opacity duration-300 absolute -left-36 shadow-md"
+            bubbleClassName="cursor-default text-sm sm:text-base px-2 sm:px-3 py-0.5 rounded-full bg-primary/85 text-black opacity-0 transition-opacity duration-300 absolute md:-left-36 md:bottom-0 -bottom-6 shadow-md"
           >
             {EMAIL_ADDRESS}
             <CopyClipboard width="18" height="18"/>
