--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,55 +9,55 @@ interface Props {
 }
 const { id } = Astro.props;
 ---
-<section {id} class="w-full min-h-screen bg-gradient flex justify-center items-center flex-col gap-8 shadow-primary drop-shadow-md">
-  <h1 class="font-montserrat font-bold text-8xl tracking-[-.5rem] flex flex-col items-center">
+<section {id} class="w-full min-h-screen bg-gradient flex justify-center items-center flex-col gap-10 md:gap-8 shadow-primary drop-shadow-md">
+  <h1 class="font-montserrat w-full font-bold text-4xl min-[300px]:text-5xl sm:text-6xl md:text-7xl xl:text-8xl tracking-[-.15rem] sm:tracking-[-.35rem] lg:tracking-[-.5rem] flex flex-col items-center">
     Hi, I'm
     <span class="inline">
       <span id="name-title" class="highlight-offset tracking-tight leading-3 font-dm-sans">Marc Arcedo</span>
     </span>
-    <span class="text-9xl tracking-[-.9rem]">
+    <span class="w-full text-center text-3xl min-[300px]:text-5xl sm:text-7xl md:text-8xl xl:text-9xl tracking-[-.25rem] sm:tracking-[-.6rem] md:tracking-[-.9rem]">
       A Web Developer.
     </span>
   </h1>
-  <p class="font-dm-sans text-xl font-semibold w-5/12 text-center">
+  <p class="font-dm-sans text-sm md:text-base xl:text-xl font-semibold w-10/12 md:w-7/12 xl:w-6/12 text-center">
     <span class="highlight-offset">I focus</span> on writing <span class="highlight-offset">clean</span>, 
     <span class="highlight-offset">reliable code</span> that 
-    <span class="highlight-offset">helps</span> make work easier for <br> <span class="highlight-offset">my team</span>.
+    <span class="highlight-offset">helps</span> make work easier for <br class="hidden"> <span class="highlight-offset">my team</span>.
     Always learning and 
-    <span class="highlight-offset">staying up to date</span> with the latest <br> technologies
+    <span class="highlight-offset">staying up to date</span> with the latest <br class="hidden"> technologies
     <span class="highlight-offset">to deliver the best results.</span>
   </p>
-  <div class="flex justify-around items-center gap-5">
+  <div class="flex justify-around items-center gap-2.5 md:gap-5">
     <SocialLinks 
       href={LINKEDIN_URL} 
       bubbleText="LinkedIn"
-      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[3.375rem] h-[3.375rem] hover:scale-95 hover:bg-black/95 transition-all duration-500"
+      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300"
     >
       <Linkedin/>
     </SocialLinks>
     <SocialLinks 
       href={GITHUB_URL} 
       bubbleText="GitHub"
-      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[3.375rem] h-[3.375rem] hover:scale-95 hover:bg-black/95 transition-all duration-500"
+      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300"
     >
       <Github/>
     </SocialLinks>
     <SocialLinks 
       href={RESUME_URL} 
       bubbleText="Resume"
-      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[3.375rem] h-[3.375rem] hover:scale-95 hover:bg-black/95 transition-all duration-500"
+      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300"
     >
-      <strong class="font-bold text-3xl font-montserrat">CV</strong>
+      <strong class="font-bold sm:text-3xl text-2xl font-montserrat">CV</strong>
     </SocialLinks>
     <EmailCopy 
       client:load 
       emailAddress={EMAIL_ADDRESS} 
       bubbleText="Copy my email" 
       successText="Ready to contact me!" 
-      buttonClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[3.375rem] h-[3.375rem] hover:scale-95 hover:bg-black/95 transition-all duration-500 [&:hover+p]:opacity-100 pb-2.5"
-      bubbleClassName={'cursor-default px-3 py-0.5 rounded-full bg-black/95 text-primary opacity-0 transition-opacity duration-300 absolute -bottom-9 shadow-md'}
+      buttonClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300 [&:hover+p]:opacity-100 pb-2.5"
+      bubbleClassName={'cursor-default text-sm sm:text-base px-2 sm:px-3 py-0.5 rounded-full bg-black/95 text-primary opacity-0 transition-opacity duration-300 absolute -bottom-9 shadow-md'}
     >
-      <strong class="font-bold text-3xl">@</strong>
+      <strong class="font-bold sm:text-3xl text-2xl">@</strong>
     </EmailCopy>
   </div>
 </section>
