--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,34 @@
 ---
 interface Props {
 	title: string;
+	description: string;
+	googleTag: string;
 }
 
-const { title } = Astro.props;
+const { title, description, googleTag } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en" class="scroll-smooth">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script async src={`https://www.googletagmanager.com/gtag/js?id=${googleTag}`}></script>
+		<script lang="ts">
+			// Google Tag Manager setup
+			window.dataLayer = window.dataLayer || [];
+			
+			function gtag(event) {
+				window.dataLayer.push(event);
+			}
+			
+			gtag({ 'js': new Date() });
+			gtag({ 'config': googleTag });
+		</script>
 	</head>
 	<body class="bg-black">
 		<slot />
