--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,19 +5,21 @@ import Experiences from '../components/Experiences.astro';
 import Footer from '../components/Footer.astro';
 import Projects from '../components/Projects.svelte';
 import Contact from '../components/Contact.astro';
-import Navbar from '../components/Navbar.astro';
+import Navbar from '../components/Navbar.svelte';
 import ArrowRight from '../icons/arrow_right.astro';
 import ArrowTopRight from '../icons/arrow_top_right.astro';
-import { SECTIONS } from '../constants/index';
+import JobSearch from '../components/Job_search.astro';
+import { SECTIONS, START_DATE_SEARCH_JOB, GOOGLE_TAG } from '../constants/index';
 ---
 
-<Layout title="Arcedo · Developer">
-	<main class="min-h-screen text-black font-dm-sans">
+<Layout title="Arcedo · Developer" description='' googleTag={GOOGLE_TAG}>
+	<main class="min-h-screen text-black font-dm-sans relative">
+		{START_DATE_SEARCH_JOB ? <JobSearch startDate={START_DATE_SEARCH_JOB}/>:''}
 		<div class="relative">
-			<Navbar sections={SECTIONS} />
+			<Navbar client:load sections={SECTIONS} />
 			<Header id={SECTIONS[0]} />
 			<div class="bg-gradient-fixed py-36">
-				<div class="w-9/12 mx-auto flex flex-col gap-36">
+				<div class="w-10/12 md:w-9/12 mx-auto flex flex-col gap-36">
 					<Experiences id={SECTIONS[1]} />
 					<Projects client:load id={SECTIONS[2]}> 
 						<ArrowRight slot="projectPreviewArrow" width='20' height='20' />
