Fix some hover effects and responsive issues also email is not a anchor not a button

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -24,7 +24,7 @@ const { id } = Astro.props;
       />
       <BubbleText
         text="Send"
-        className="cursor-default absolute text-primary w-[4rem] rounded-full px-3 py-0.5 bottom-[.03rem] right-10 shadow-md bg-black/95 opacity-0 transition-opacity duration-300"
+        className="cursor-default absolute text-primary w-[4rem] rounded-full px-3 py-0.5 bottom-[.03rem] right-10 shadow-md bg-black/95 opacity-0 transition-opacity duration-300 hidden lg:block"
       />
     </Fragment>
   </Form>
