--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,6 @@
 import Linkedin from "../icons/linkedin.astro";
 import Github from "../icons/github.astro";
 import SocialLinks from "./Social_links.astro";
-import EmailCopy from "./Email_copy.svelte";
 import { LINKEDIN_URL, GITHUB_URL, RESUME_URL, EMAIL_ADDRESS } from '../constants/index';
 interface Props {
   id: string;
@@ -49,16 +48,20 @@ const { id } = Astro.props;
     >
       <strong class="font-bold sm:text-3xl text-2xl font-montserrat">CV</strong>
     </SocialLinks>
-    <EmailCopy 
-      client:load 
-      emailAddress={EMAIL_ADDRESS} 
-      bubbleText="Copy my email" 
-      successText="Ready to contact me!" 
-      buttonClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300 [&:hover+p]:opacity-100 pb-2.5"
-      bubbleClassName={'cursor-default text-sm sm:text-base px-2 sm:px-3 py-0.5 rounded-full bg-black/95 text-primary opacity-0 transition-opacity duration-300 absolute -bottom-9 shadow-md'}
+    <!-- <SocialLinks 
+      href={RESUME_URL} 
+      bubbleText="Send me an email"
+      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300 pb-2.5"
     >
       <strong class="font-bold sm:text-3xl text-2xl">@</strong>
-    </EmailCopy>
+    </SocialLinks> -->
+    <SocialLinks 
+      href={'mailto:'+EMAIL_ADDRESS} 
+      bubbleText="arcedo.marc@gmail.com"
+      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300 pb-2.5"
+    >
+      <strong class="font-bold sm:text-3xl text-2xl">@</strong>
+    </SocialLinks>
   </div>
 </section>
 
