change about me and fix job search component to be client load

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,13 +18,8 @@ const { id } = Astro.props;
       A Web Developer.
     </span>
   </h1>
-  <p class="font-dm-sans text-sm md:text-base xl:text-xl font-semibold w-10/12 md:w-7/12 xl:w-6/12 text-center">
-    <span class="highlight-offset">I focus</span> on writing <span class="highlight-offset">clean</span>, 
-    <span class="highlight-offset">reliable code</span> that 
-    <span class="highlight-offset">helps</span> make work easier for <br class="hidden"> <span class="highlight-offset">my team</span>.
-    Always learning and 
-    <span class="highlight-offset">staying up to date</span> with the latest <br class="hidden"> technologies
-    <span class="highlight-offset">to deliver the best results.</span>
+  <p class="font-dm-sans text-sm md:text-base xl:text-xl font-semibold w-10/12 md:w-6/12 text-center">
+    With <span class="highlight-offset">over a year</span> of <span class="highlight-offset">experience</span>. Based in <span class="highlight-offset">Barcelona</span>, Spain, I'm passionate about both <br class="hidden xl:block"><span class="highlight-offset">dev</span> and <span class="highlight-offset">design</span>. I’m focusing on <span class="highlight-offset">backend</span>, exploring better, more efficient ways <br class="hidden xl:block">to code. Right now, I'm learning <span class="highlight-offset">Rust</span> and <span class="highlight-offset">Go</span> to get a stronger handle <br class="hidden xl:block">on <span class="highlight-offset">systems programming</span> and <span class="highlight-offset">lower-level concepts</span>.
   </p>
   <div class="flex justify-around items-center gap-2.5 md:gap-5">
     <SocialLinks 
@@ -48,13 +43,6 @@ const { id } = Astro.props;
     >
       <strong class="font-bold sm:text-3xl text-2xl font-montserrat">CV</strong>
     </SocialLinks>
-    <!-- <SocialLinks 
-      href={RESUME_URL} 
-      bubbleText="Send me an email"
-      anchorClassName="bg-black text-primary p-1 flex justify-center items-center rounded-md w-[2.5rem] h-[2.5rem] sm:w-[3.375rem] sm:h-[3.375rem] hover:scale-105 hover:bg-black/95 transition-all duration-300 pb-2.5"
-    >
-      <strong class="font-bold sm:text-3xl text-2xl">@</strong>
-    </SocialLinks> -->
     <SocialLinks 
       href={'mailto:'+EMAIL_ADDRESS} 
       bubbleText="arcedo.marc@gmail.com"
