updated data and some fixes

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -15,7 +15,7 @@ const { id } = Astro.props;
     </span>
     Me
   </h2>
-  <Form client:load >
+  <Form client:idle >
     <Fragment slot="sendButtonStyle">
       <Send
         width="28"
