--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -10,14 +10,16 @@ const { isOdd, experience } = Astro.props;
 ---
 <a href={experience.linkPage} target="_blank" class={`pb-5 border-black ${isOdd ? 'border-r border-l md:border-l-0 ':'border-x'} group group/arrow hover:bg-black transition-colors duration-500 hover:text-primary`}>
   <div class="border-b border-black pt-5">
-    <p class="text-black/70 font-light pl-5 group-hover:text-primary/90 transition-colors duration-500">{
-      experience.startYear && experience.startYear != experience.endYear ? 
-      `${experience.startYear} - ${experience.endYear}`
-      :
-      `${experience.startMonth} - ${experience.endMonth} ${experience.endYear}`}
+    <p class="text-black/70 font-light pl-5 group-hover:text-primary/90 transition-colors duration-500">
+        {
+          experience.startMonth && !experience.endMonth ? `${experience.startMonth} ${experience.startYear} - ${experience.endYear ?? 'Present'}` : experience.startYear && experience.startYear != experience.endYear ?
+          `${experience.startYear} - ${experience.endYear ?? 'Present'}`
+          :
+          `${experience.startMonth} - ${experience.endMonth} ${experience.endYear}`
+        }
     </p>
     <div class="pl-2  md:pl-5 flex justify-between items-end group-hover:text-accent">
-      <h3 class="font-montserrat font-bold text-2xl">{experience.company}</h3>
+      <h3 class="font-montserrat font-bold text-2xl" set:html={experience.company}></h3>
       <ArrowTopRight width="28" height="28"/>
     </div>
   </div>
