--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title, description, googleTag } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<script is:inline async src={`https://www.googletagmanager.com/gtag/js?id=${googleTag}`}></script>
+		<script is:inline async src={`https://www.googletagmanager.com/gtag/js?id=G-S14VF5TDN8`}></script>
 		<script is:inline lang="ts">
 			// Google Tag Manager setup
 			window.dataLayer = window.dataLayer || [];
@@ -27,7 +27,7 @@ const { title, description, googleTag } = Astro.props;
 			}
 
 			gtag({ 'js': new Date() });
-			gtag({ 'config': googleTag });
+			gtag({ 'config': "G-S14VF5TDN8" });
 		</script>
 	</head>
 	<body class="bg-black">
