--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,10 +2,9 @@
 interface Props {
 	title: string;
 	description: string;
-	googleTag: string;
 }
 
-const { title, description, googleTag } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
@@ -18,18 +17,41 @@ const { title, description, googleTag } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="author" content="Marc Arcedo Alvaro" />
-		<script is:inline async src={`https://www.googletagmanager.com/gtag/js?id=G-S14VF5TDN8`}></script>
-		<script is:inline lang="ts">
-			// Google Tag Manager setup
-			window.dataLayer = window.dataLayer || [];
+		<script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-S14VF5TDN8"></script>
+        <script is:inline lang="ts">
+     			if ('IntersectionObserver' in window) {
+        				const observer = new IntersectionObserver(
+       					(entries) => {
+      						entries.forEach((entry) => {
+     							if (entry.isIntersecting) {
+        								window.dataLayer = window.dataLayer || [];
 
-			function gtag(event) {
-				window.dataLayer.push(event);
-			}
+        								function gtag(event) {
+       									window.dataLayer.push(event);
+        								}
 
-			gtag({ 'js': new Date() });
-			gtag({ 'config': "G-S14VF5TDN8" });
-		</script>
+        								gtag({ 'js': new Date() });
+        								gtag({ 'config': "G-S14VF5TDN8" });
+
+        								observer.disconnect();
+     							}
+      						});
+       					},
+       					{ threshold: 0.1 }
+        				);
+
+        				observer.observe(document.documentElement);
+     			} else {
+        				window.dataLayer = window.dataLayer || [];
+
+        				function gtag(event) {
+       					window.dataLayer.push(event);
+        				}
+
+        				gtag({ 'js': new Date() });
+        				gtag({ 'config': "G-S14VF5TDN8" });
+     			}
+        </script>
 	</head>
 	<body class="bg-black">
 		<slot />
