--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ interface Props {
 }
 const { id } = Astro.props;
 ---
-<section {id} class="w-full min-h-screen bg-gradient flex pt-16 md:justify-center items-center flex-col gap-10 md:gap-8 shadow-primary drop-shadow-md">
+<section {id} class="w-full min-h-screen flex pt-16 md:justify-center items-center flex-col gap-10 md:gap-8 shadow-primary drop-shadow-md">
   <h1 class="font-montserrat w-11/12 md:w-full font-bold text-4xl sm:text-6xl md:text-7xl xl:text-8xl tracking-[-.15rem] sm:tracking-[-.35rem] lg:tracking-[-.5rem] flex flex-col items-start md:items-center">
     Hi, I'm
     <span class="inline">
