--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,8 @@ import { SECTIONS, START_DATE_SEARCH_JOB } from '../constants/index';
     title="Arcedo · Developer"
     description="I'm Marc Arcedo, a passionate software developer who loves building impactful software. Explore my projects, experiences, and find ways to connect with me."
 >
-	<main class="min-h-screen text-black font-dm-sans relative bg-gradient">
+    <div class="bg-gradient"></div>
+	<main class="min-h-screen text-black font-dm-sans relative">
 		{START_DATE_SEARCH_JOB ? <JobSearch client:load startDate={START_DATE_SEARCH_JOB}/>:''}
 		<div class="relative">
 			<Navbar client:load sections={SECTIONS} />
